new sitemap meta url change for blogs

--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -27,7 +27,7 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:url" content="https://thedaxads.com/Revolution-in-digital-Space">
 	<meta property="og:title" content="Revolution in digital Space | DAX - Best Digital Marketing Agency">
 	<meta property="og:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
@@ -37,7 +37,7 @@
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:url" content="https://thedaxads.com/Revolution-in-digital-Space">
 	<meta property="twitter:title" content="Revolution in digital Space | DAX - Best Digital Marketing Agency">
 	<meta property="twitter:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
