--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -25,7 +25,7 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:url" content="https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020">
 	<meta property="og:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
 	<meta property="og:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
 	<meta property="og:image" content="assets/images/posts/essential/horizontal-essential.jpg"/>
@@ -33,7 +33,7 @@
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:url" content="https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020">
 	<meta property="twitter:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
 	<meta property="twitter:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
 	<meta property="twitter:image" content="assets/images/posts/essential/horizontal-essential.jpg"/>
