--- a/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
+++ b/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
@@ -25,7 +25,7 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:url" content="https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach">
 	<meta property="og:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
 	<meta property="og:image" content="assets/images/posts/refine-marketing/horizontal-target.jpg"/>
@@ -33,7 +33,7 @@
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:url" content="https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach">
 	<meta property="twitter:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
 	<meta property="twitter:image" content="assets/images/posts/refine-marketing/horizontal-target.jpg"/>
