--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -25,7 +25,7 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:url" content="https://thedaxads.com/the-future-is-multi-shaped">
 	<meta property="og:title" content="The Future Is Multi-shaped | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration, more creativity than ever, we need to move beyond the ‘I’">
 	<meta property="og:image" content="assets/images/posts/multi-shaped/horizontal.jpg"/>
@@ -33,7 +33,7 @@
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:url" content="https://thedaxads.com/the-future-is-multi-shaped">
 	<meta property="twitter:title" content="The Future Is Multi-shaped | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration, more creativity than ever, we need to move beyond the ‘I’">
 	<meta property="twitter:image" content="assets/images/posts/multi-shaped/horizontal.jpg"/>
