--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -25,7 +25,7 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://thedaxads.com/">
+	<meta property="og:url" content="https://thedaxads.com/top-choices-in-web-hosting">
 	<meta property="og:title" content="Top Choices In Web Hosting | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and that the website is well protected and so many things that make sure your website lives up to the standard of what your customers should expect from you. So, like all things Web Hosting services comes in all shapes and sizes in whether they are offering shared hosting, dedicated hosting, VPS, Manage Hosting, Server Cores, Different RAMs, SSL Certificates etc. ... its endless, there is just an endless number of things that web hosting servers offers to you because what everybody needs is different.">
 	<meta property="og:image" content="assets/images/posts/hosting/horizontal-hosting.jpg"/>
@@ -33,7 +33,7 @@
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://thedaxads.com/">
+	<meta property="twitter:url" content="https://thedaxads.com/top-choices-in-web-hosting">
 	<meta property="twitter:title" content="Top Choices In Web Hosting | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and that the website is well protected and so many things that make sure your website lives up to the standard of what your customers should expect from you. So, like all things Web Hosting services comes in all shapes and sizes in whether they are offering shared hosting, dedicated hosting, VPS, Manage Hosting, Server Cores, Different RAMs, SSL Certificates etc. ... its endless, there is just an endless number of things that web hosting servers offers to you because what everybody needs is different.">
 	<meta property="twitter:image" content="assets/images/posts/hosting/horizontal-hosting.jpg"/>
