--- a/about.html
+++ b/about.html
@@ -582,7 +582,7 @@
 									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.htlm" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
