--- a/academy.html
+++ b/academy.html
@@ -58,7 +58,6 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
 
-		<title>DAX | Academy - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -287,7 +286,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="contact.html.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="contact.html.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
