--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/am.png" loading="lazy" alt="Automagic">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/am-red.png" loading="lazy" alt="Automagic">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/ytalks white.png" loading="lazy" alt="Ytalks">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/ytalks red.png" loading="lazy" alt="Ytalks">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -630,8 +630,8 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/maithri.png" loading="lazy" alt="Maithri">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/maithri-red.png" loading="lazy" alt="Maithri">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/dealzwhite.png" loading="lazy" alt="DealzMart">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/dealzred.png" loading="lazy" alt="DealzMart">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -670,8 +670,8 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/find-the-one.png" loading="lazy" alt="find-the-one">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/find-the-one-red.png" loading="lazy" alt="find-the-one">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/comparecvwhite.png" loading="lazy" alt="CompareCv">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/comparecvred.png" loading="lazy" alt="CompareCv">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -686,8 +686,8 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/nsm.png" loading="lazy" alt="NSM">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/nsm-red.png" loading="lazy" alt="NSM">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/konderawhite.png" loading="lazy" alt="Kondara">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/konderared.png" loading="lazy" alt="Kondara">
 								</div>
 							</div><!-- clients-lines__column end -->
 
