--- a/client.html
+++ b/client.html
@@ -523,6 +523,76 @@
 								</a>
 							</div>
 						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/kondara.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/oss.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/royal.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/dealz.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/findtheone.jpg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/ytalks.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/comparecv.jpeg" loading="lazy" alt="PowershiftMoterSport">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
 
 					</div><!-- js-isotope-grid-box end -->
 				</div><!-- pos-rel end -->
