--- a/client.html
+++ b/client.html
@@ -747,9 +747,10 @@
 							<div class="margin-top-10">
 								<a href="https://g.page/dax-ads-kannur?share" target="_blank"
 									class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
-									DAX #1st Floor <br>
-									Arafa Complex , Aarat Road ,<br>
-									Kannur , Pin :670001
+									DAX Ads <br>
+									Pannenpara Road, <br>
+									PO. Pallikunnu <br>
+									Kannur, Pin :67004
 								</a>
 							</div>
 						</div>
