--- a/contact.html
+++ b/contact.html
@@ -419,18 +419,24 @@
 								<h6 class="list list_margin-1px padding-top-20 text-color-b0b0b0">
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-01">DAX #1st Floor</span>
+											<span class="subhead-xxs anim-reveal tr-delay-01">DAX Ads</span>
 										</span>
 									</span>
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-02">Arafa Complex, Aarat
-												Road,</span>
+											<span class="subhead-xxs anim-reveal tr-delay-02">Pannenpara Road,
+												</span>
 										</span>
 									</span>
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-03">Kannur, Pin :670001</span>
+											<span class="subhead-xxs anim-reveal tr-delay-02">PO. Pallikunnu
+											</span>
+										</span>
+									</span>
+									<span class="list__item">
+										<span class="d-inline-block hidden-box">
+											<span class="subhead-xxs anim-reveal tr-delay-03">Kannur, Pin :67004</span>
 										</span>
 									</span>
 								</h6>
@@ -714,9 +720,10 @@
 							<div class="margin-top-10">
 								<a href="https://g.page/dax-ads-kannur?share" target="_blank"
 									class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
-									DAX #1st Floor <br>
-									Arafa Complex , Aarat Road ,<br>
-									Kannur , Pin :670001
+									DAX Ads <br>
+									Pannenpara Road, <br>
+									PO. Pallikunnu <br>
+									Kannur, Pin :67004
 								</a>
 							</div>
 						</div>
