voxel_link_update

--- a/academy.html
+++ b/academy.html
@@ -619,7 +619,7 @@
 									<a href="services.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Services</a>
 								</li>
 								<li>
-									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="https://voxeledu.com" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
