--- a/academy.html
+++ b/academy.html
@@ -233,7 +233,7 @@
 				<a href="services.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Services</a>
 			</li>
 			<li class="landing-nav__btn">
-				<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+				<a href="https://voxeledu.com" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 			</li>
 			<li class="landing-nav__btn">
 				<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Clients</a>
