--- a/Portfolio/wasith/about.html
+++ b/Portfolio/wasith/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:21 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
+    <link rel="stylesheet" href="assets/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -61,7 +60,7 @@
                         <div class="about-image-box shadow-box">
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <div class="image-inner">
-                                <img src="assets/images/me2.png" alt="About Me">
+                                <img src="assets/images/wasithportfolio.JPG" alt="About Me">
                             </div>
                         </div>
                     </div>
@@ -70,7 +69,7 @@
                         <h1 class="section-heading" data-aos="fade-up"><img src="assets/images/star-2.png" alt="Star"> Self-summary <img src="assets/images/star-2.png" alt="Star"></h1>
                         <div class="about-details-inner shadow-box">
                             <img src="assets/images/icon2.png" alt="Star">
-                            <h1>David Henderson</h1>
+                            <h1>Abdul Wasith</h1>
                             <p>I am a San francisco-based product designer with a focus on web design, illustration, a visual development. I have a diverse range of experience having worked across various fields and industries.</p>
                         </div>
 
@@ -214,5 +213,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:24 GMT -->
 </html>
