--- a/Portfolio/wasith/contact.html
+++ b/Portfolio/wasith/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:26 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
+    <link rel="stylesheet" href="assets/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -29,7 +28,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/og-logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
@@ -66,8 +65,8 @@
                                 </div>
                                 <div class="right">
                                     <span>MAIL us</span>
-                                    <h4>info@bluebase.com</h4>
-                                    <h4>info@bluebase2.com</h4>
+                                    <h4> wasith1997@gmail.com</h4>
+                                    <!-- <h4>info@bluebase2.com</h4> -->
                                 </div>
                             </li>
 
@@ -77,8 +76,8 @@
                                 </div>
                                 <div class="right">
                                     <span>Contact Us</span>
-                                    <h4>+1 504-899-8221</h4>
-                                    <h4>+1 504-749-5456</h4>
+                                    <h4>+91 9746 58 3440</h4>
+                                    <!-- <h4>+1 504-749-5456</h4> -->
                                 </div>
                             </li>
 
@@ -88,7 +87,10 @@
                                 </div>
                                 <div class="right">
                                     <span>Location</span>
-                                    <h4>22 Baker Street, Texas <br>United States <br>W1U 3BW</h4>
+                                    <h4>DAX Ads <br>
+                                    Pannenpara Road, <br>
+                                    PO. Pallikunnu <br>
+                                    Kannur, Pin :67004</h4>
                                 </div>
                             </li>
                         </ul>
@@ -106,10 +108,10 @@
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <img src="assets/images/icon3.png" alt="Icon">
                             <h1>Let’s work <span>together.</span></h1>
-                            <form method="POST" action="https://wpriverthemes.com/landing/gridx-html/mailer.php">
-                                <div class="alert alert-success messenger-box-contact__msg" style="display: none" role="alert">
+                            <form method="POST" action="mailto:wasith1997@gmail.com" enctype="text/plain">
+                                <!-- <div class="alert alert-success messenger-box-contact__msg" style="display: none" role="alert">
                                     Your message was sent successfully.
-                                </div>
+                                </div> -->
                                 <div class="input-group">
                                     <input type="text" name="full-name" id="full-name" placeholder="Name *">
                                 </div>
@@ -139,7 +141,7 @@
             <div class="container">
                 <div class="footer-content text-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/apple-touch-icon-57x57-white.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -164,5 +166,4 @@
     <script src="assets/js/ajax-form.js"></script>
 </body>
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:27 GMT -->
 </html>
