--- a/Portfolio/wasith/credentials.html
+++ b/Portfolio/wasith/credentials.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/credentials.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:27 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
+    <link rel="stylesheet" href="assets/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -29,7 +28,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img style="height: 87px;" src="assets/images/og-logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
@@ -62,10 +61,10 @@
                             <div class="shadow-box">
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="img-box">
-                                    <img src="assets/images/me.png" alt="About Me">
+                                    <img src="assets/images/wasithportfolio.JPG" alt="About Me">
                                 </div>
-                                <h2>David Henderson</h2>
-                                <p>@davidhenderson</p>
+                                <h2>Abdul Wasith</h2>
+                                <p>@_wacheee_</p>
         
                                 <ul class="social-links d-flex justify-content-center">
                                     <li><a href="#"><i class="iconoir-dribbble"></i></a></li>
@@ -183,7 +182,7 @@
             <div class="container">
                 <div class="footer-content text-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/apple-touch-icon-57x57-white.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -207,5 +206,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/credentials.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:27 GMT -->
 </html>
