--- a/Portfolio/wasith/index.html
+++ b/Portfolio/wasith/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:13:47 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gridx - Personal Portfolio HTML Template</title>
+    <title>Dax - Personal Portfolio</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../cdn.jsdelivr.net/gh/iconoir-icons/iconoir%40main/css/iconoir.css">
+    <link rel="stylesheet" href="assets/css/iconoir.css">
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/aos.css">
@@ -29,7 +28,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img style="height: 87px;" src="assets/images/og-logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
@@ -62,12 +61,12 @@
                             <a class="overlay-link" href="about.html"></a>
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <div class="img-box">
-                                <img src="assets/images/me.png" alt="About Me">
+                                <img src="assets/images/wasithportfolio.JPG" alt="About Me">
                             </div>
                             <div class="infos">
-                                <h4>A WEB DESIGNER</h4>
-                                <h1>David Henderson.</h1>
-                                <p>I am a Web Designer based in san francisco.</p>
+                                <h4>CEO of DaxAds</h4>
+                                <h1>Abdul Wasith</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, consectetur?</p>
                                 <a href="#" class="about-btn">
                                     <img src="assets/images/icon.svg" alt="Button">
                                 </a>
@@ -183,9 +182,11 @@
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
                                         <a href="#">
-                                            <i class="iconoir-dribbble"></i>
+                                            <i class="iconoir-instagram"></i>
                                         </a>
                                         <a href="#">
+                                             
+
                                             <i class="iconoir-twitter"></i>
                                         </a>
                                     </div>
@@ -254,7 +255,7 @@
             <div class="container">
                 <div class="footer-content text-center">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.svg" alt="Logo">
+                        <img src="assets/images/apple-touch-icon-57x57-white.png" alt="Logo">
                     </a>
                     <ul class="footer-menu">
                         <li><a href="index.html">Home</a></li>
@@ -278,5 +279,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from wpriverthemes.com/landing/gridx-html/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Apr 2023 05:14:01 GMT -->
 </html>
