--- a/Portfolio/wasith/contact.html
+++ b/Portfolio/wasith/contact.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="gx-row d-flex align-items-center justify-content-between">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/og-logo.png" alt="Logo">
+                        <img style="height: 87px;" src="assets/images/og-logo.png" alt="Logo">
                     </a>
 
                     <nav class="navbar">
