--- a/Portfolio/wasith/contact.html
+++ b/Portfolio/wasith/contact.html
@@ -5,8 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gridx - Personal Portfolio HTML Template</title>
+<title>DAX - Personal Portfolio </title>
+<meta name="title" content="DAX | About - Best Digital Marketing Agency">
+<meta name="description"
+    content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.">
 
+<meta name="keywords"
+    content="Dax, DaxAds, Thedaxads, Digital marketing, web development, app development, advertising agency ,graphic designing, kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course,innovators,innovations,dax, best agency,growth hacking,brand building,agency,growing brands,helping out,growing brands,about us,grow ">
+
+<meta name="author" content="DAX - Best Digital Marketing Agency">
+<meta name="robots" content="index, follow">
+
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://thedaxads.com/">
+<meta property="og:title" content="DAX | About - Best Digital Marketing Agency">
+<meta property="og:description"
+    content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+        			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+<meta property="og:image" content="assets/images/image.jpeg" />
+<meta property="og:image"
+    content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://thedaxads.com/">
+<meta property="twitter:title" content="DAX | About - Best Digital Marketing Agency">
+<meta property="twitter:description"
+    content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
+        			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
+<meta property="twitter:image" content="assets/images/image.jpeg" />
+<meta property="twitter:image"
+    content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
