--- a/Portfolio/wasith/about.html
+++ b/Portfolio/wasith/about.html
@@ -116,15 +116,15 @@
 
                             <ul>
                                 <li>
-                                    <p class="date">2007 - 2017</p>
-                                    <h2>Framer Designer & Developer</h2>
-                                    <p class="type">Bluebase Designs</p>
+                                    <p class="date">5+ years</p>
+                                    <h2>Digital Marketing Manager</h2>
+                                    <p class="type">Dax Ads · Full-time</p>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <p class="date">2017 - 2023</p>
                                     <h2>Front-End Developer</h2>
                                     <p class="type">Larsen & Toubro</p>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -135,15 +135,15 @@
 
                             <ul>
                                 <li>
-                                    <p class="date">2004 - 2007</p>
-                                    <h2>Bachelor Degree in Psychology</h2>
-                                    <p class="type">University of California</p>
+                                    <p class="date">2015 - 2018</p>
+                                    <h2>Bachelor of Arts - BA, Journalism</h2>
+                                    <p class="type">St. Aloysius College, Mangalore-575003</p>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <p class="date">2007 - 2009</p>
                                     <h2>Master Degree in Designing</h2>
                                     <p class="type">University of Texas</p>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -157,11 +157,11 @@
                                 <div class="about-profile-box info-box shadow-box h-full">
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="inner-profile-icons shadow-box">
-                                        <a href="#">
-                                            <i class="iconoir-dribbble"></i>
+                                        <a href="https://www.facebook.com/wasith1">
+                                            <i class="iconoir-facebook"></i>
                                         </a>
-                                        <a href="#">
-                                            <i class="iconoir-twitter"></i>
+                                        <a href="https://www.instagram.com/_wacheee_/">
+                                            <i class="iconoir-instagram"></i>
                                         </a>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
