--- a/Portfolio/wasith/index.html
+++ b/Portfolio/wasith/index.html
@@ -190,10 +190,10 @@
                                     <a href="service.html" class="overlay-link"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                     <div class="icon-boxes">
-                                        <i class="iconoir-camera"></i>
-                                        <i class="iconoir-design-pencil"></i>
-                                        <i class="iconoir-color-filter"></i>
-                                        <i class="iconoir-dev-mode-phone"></i>
+                                        <i class="iconoir-media-image-list"></i>
+                                        <i class="iconoir-design-pencil icon"></i>
+                                        <i class="iconoir-video-camera"></i>
+                                        <i class="iconoir-dev-mode-phone icon"></i>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
@@ -219,7 +219,7 @@
                                         <a href="https://www.facebook.com/wasith1">
                                              
 
-                                            <i class="iconoir-facebook-tag"></i>
+                                            <i class="iconoir-facebook"></i>
                                         </a>
                                     </div>
                                     <div class="d-flex align-items-center justify-content-between">
