--- a/Portfolio/wasith/service.html
+++ b/Portfolio/wasith/service.html
@@ -96,20 +96,20 @@
                             <div class="service-sidebar-inner shadow-box">
                                 <ul>
                                     <li>
-                                        <i class="iconoir-camera icon"></i>
-                                        PHOTOGRAPHY
+                                        <i class="iconoir-media-image-list"></i>
+                                        GRAPHICS DESIGNING
                                     </li>
                                     <li>
                                         <i class="iconoir-design-pencil icon"></i>
                                         WEB DESIGNING
                                     </li>
                                     <li>
-                                        <i class="iconoir-color-filter icon"></i>
-                                        BRANDING
+                                        <i class="iconoir-video-camera"></i>
+                                        VIDEO EDITING
                                     </li>
                                     <li>
                                         <i class="iconoir-dev-mode-phone icon"></i>
-                                        DEVELOPMENT
+                                        DIGITAL MARKETING
                                     </li>
                                 </ul>
                             </div>
@@ -124,20 +124,27 @@
                             <div class="service-content-inner shadow-box">
                                 <div class="service-items">
                                     <div class="service-item">
-                                        <h3>Photography</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>GRAPHICS DESIGNING</h3>
+                                        <p>Graphic design is the art of combining visual elements, such as typography, imagery, and color, to communicate a message
+                                        or idea to a specific audience through various mediums like print, digital, and environmental design.</p>
                                     </div>
                                     <div class="service-item">
                                         <h3>Web Designing</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <p>Web design is the process of creating visually appealing and functional websites by combining elements such as layout,
+                                        typography, color, and imagery to provide an optimal user experience and communicate a message or idea to a specific
+                                        audience..</p>
                                     </div>
                                     <div class="service-item">
-                                        <h3>Branding</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>VIDEO EDITING</h3>
+                                        <p>Video editing is the process of manipulating and rearranging video footage, audio, and other elements to create a final
+                                        product. It involves adding effects, transitions, color correction, and other enhancements to create a cohesive story or
+                                        message.</p>
                                     </div>
                                     <div class="service-item">
-                                        <h3>Development</h3>
-                                        <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor asna rhoncus dolor purus non enim aberitin praesent in elementum sahas facilisis leo, vel fringilla est etisam dignissim.</p>
+                                        <h3>DIGITAL MARKETING</h3>
+                                        <p>Digital marketing encompasses a range of online strategies and tactics such as SEO, social media, email marketing, PPC
+                                        advertising, and content marketing to reach and engage with potential customers, build brand awareness, and drive
+                                        conversions.</p>
                                     </div>
                                 </div>
                             </div>
