--- a/Portfolio/wasith/credentials.html
+++ b/Portfolio/wasith/credentials.html
@@ -98,10 +98,10 @@
                                 <p>@_wacheee_</p>
         
                                 <ul class="social-links d-flex justify-content-center">
-                                    <li><a href="#"><i class="iconoir-dribbble"></i></a></li>
+                                    <li><a href="#"><i class="iconoir-linkedin"></i></a></li>
                                     <li><a href="#"><i class="iconoir-twitter"></i></a></li>
                                     <li><a href="https://www.instagram.com/_wacheee_/"><i class="iconoir-instagram"></i></a></li>
-                                    <li><a href="https://www.facebook.com/wasith1"><i class="iconoir-facebook-tag"></i></a></li>
+                                    <li><a href="https://www.facebook.com/wasith1"><i class="iconoir-facebook"></i></a></li>
                                 </ul>
         
                                 <a href="contact.html" class="theme-btn">Contact Me</a>
